fix styling on elements in accordion as was not showing on deployed site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,20 +42,6 @@ h1, h2, h3, h4{
       line-height: 48px;
 }
 
-ul {
-    list-style-type: none;
-}
-
-
-.home-page-button{
-    border: 2px groove #31315b;
-    margin: 10px 20px 0;
-    color: rgb(166, 172, 194);
-    font-weight: 800;
-    background-color: #31315b;
-    padding: 5px 10px;
-    border-radius: 5px;
-}
 
 
 /* Nav bar*/
@@ -121,6 +107,21 @@ ul {
     font-weight: 900;
     font-size: 24px;
     font-family: 'Lobster', cursive;
+}
+
+.card-body ul {
+    list-style-type: none;
+}
+
+
+.card-body .home-page-button{
+    border: 2px groove #31315b;
+    margin: 10px 20px 0;
+    color: rgb(166, 172, 194);
+    font-weight: 800;
+    background-color: #31315b;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
 
 /*Game page*/
